# 3D-GPolylla

./: .clang-format  .clangd  .gitignore  .gitmodules  .polyscope.ini  CMakeLists.txt  CMakePresets.json  Makefile  README.md  compile_commands.json  cubeMesh.visf  imgui.ini  log.txt  main.cpp  vcpkg.json
data/: 1000points.1.edge.old  1000points.1.ele  1000points.1.f2e  1000points.1.face  1000points.1.node  1000points.1.t2e  1000points.node  1000points.visf  1000points07.1.ele  1000points07.1.f2e  1000points07.1.node  1000points07.edge  3D_100.1.edge  3D_100.1.ele  3D_100.1.t2f  3D_100.1_frontier_faces.off  3D_100.1_frontier_faces.stl  3D_100.1_polyhedron_mesh.off  3D_100.face  3D_100.node  3Dsamplegeneration.ipynb  angel.ele  angel.face  angel.node  basic.edge  basic.ele  basic.face  cloudpoints.py  cube.off  generateData.py  mage.ele  mage.face  mage.node  minimal.node  minimal.visf  socket.1.edge  socket.1.t2e  socket.1.t2f  socket.face  socket.visf  (+1 more)
demo/: CMakeLists.txt  main.cpp  polyscope.cpp  quality.cpp
examples/: CMakeLists.txt  normal.cpp  quality.cpp  simple.cpp  visualizador.cpp
examples/shaders/: shader.frag
include/: gpolylla.h  mesh.h
include/GPolylla/: face.h  mesh.h
include/gpolylla/: algo.h  builder.h  edge.h  face.h  io.h  mesh.h  polylla.h  stat.h  tetra.h  utils.h  vertex.h
include/gpolylla/algo/: algo.h.old  face.h
include/gpolylla/io/: reader.h
include/gpolylla/mesh/: basic.h  face.h  mesh.h  vertex.h
include/gpolylla/old/algo/: face.h
include/gpolylla/old/io/: reader.h
include/gpolylla/old/mesh/old/: face.h  tetra.h
old/include/gpolylla/: algo.h  io.h  mesh.h  utils.h
old/include/gpolylla/old/mesh/: basic.h
old/include/gpolylla/old/mesh/old/: edge.h
old/src/: CMakeLists.txt  cavity_algorithm.cpp  face_algorithm.cpp  face_mesh.cpp  mesh.cpp  tetgen.cpp  utils.cpp  visf.cpp
old/test/: cavity_algorithm_test.cpp  face_mesh_test.cpp  mesh_test.cpp  tetgen_test.cpp  utils_test.cpp  visf_test.cpp
old2/include/: gpolylla.h
old2/src/: CMakeLists.txt  cavity_algorithm.cpp  cavity_mesh.cpp  face_algorithm.cpp  face_mesh.cpp  math.cpp  utils.cpp
old2/test/: CMakeLists.txt
src/: CMakeLists.txt  cavity.cpp  cavity_algorithm.cpp  cavity_mesh.cpp  face.cpp  face_algorithm.cpp  face_mesh.cpp  logger.cpp  logger.h  main.cpp  math.cpp  mesh.cc  mesh.cpp  neighbours.cpp  old_face.cpp  polylla.h  reader.cpp  stat.cpp  tetgen.cpp  tetgen_reader.cpp  utils.cpp  utils.h  visf.cpp  visf_writer.cpp  writer.cpp
src/algo/: face.cpp
src/builder/: tetgen.cpp
src/exe/: CMakeLists.txt  main.cpp
src/io/: tetgen.cpp
src/mesh/: basic.cpp  edge.cpp  face.cpp  mesh.cpp  tetra.cpp  vertex.cpp
src/mesh/old/: mesh.cpp  tetra.cpp
src/renderer/: CMakeLists.txt  main.cpp
src/renderer/shaders/: basic.fs  basic.vs  cell.fs  cell.vs  grid.fs  grid.vs  phong.fs  phong.vs  triangle.vs
temp/: minimal.visf  socket.visf  test.visf
test/: CMakeLists.txt  cavity_algorithm_test.cpp  cavity_test.cpp  face_algorithm_test.cpp  face_mesh_test.cpp  io_test.cpp  mesh_test.cc  mesh_test.cc.old  mesh_test.cpp  tetgen_test.cpp  utils.h  utils_test.cpp  visf_test.cpp  visf_writer_test.cpp
test/algo/: face_test.cpp
test/io/: tetgen_test.cpp
test/mesh/: basic_test.cpp  edge_test.cpp  face_test.cpp  vertex_test.cpp
test/mesh/old/: face_test.cpp  tetra_test.cpp  vertex_test.cpp
